--- a/index.html
+++ b/index.html
@@ -5,9 +5,36 @@
     <title>hubspot</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    <header>
+      <!-- navbar -->
+      <nav class="center">
+
+        <div class="nav-top">
+          <div class="left inliner">
+            <ul class="menu inliner">
+              <li class="inliner first"><a href="#"><i class="fas fa-globe-europe"></i>English<i class="fas fa-chevron-down"></i></a></li>
+              <li class="inliner"><a href="#">Contact us</a></li>
+            </ul>
+          </div>
+
+          <div class="right inliner">
+            <ul class="inliner">
+              <li class="inliner"><a href="#"><i class="fas fa-search"></i></a></li>
+              <li class="inliner"><a href="#"><button class="btn" type="button" name="button">Log in</button></a></li>
+              <li class="inliner"><a href="#"><button class="btn full" type="button" name="button">GetHubspotFree</button></a></li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="nav-bot">
+
+        </div>
+      </nav>
+    </header>
 
   </body>
 </html>
