--- a/index.html
+++ b/index.html
@@ -11,29 +11,44 @@
   <body>
     <header>
       <!-- navbar -->
-      <nav class="center">
+      <nav>
+        <div class="top">
+          <div class="nav-top center">
+            <div class="left inliner">
+              <ul class="menu inliner">
+                <li class="inliner first"><a href="#"><i class="fas fa-globe-europe"></i>English<i class="fas fa-chevron-down"></i></a></li>
+                <li class="inliner"><a href="#">Contact us</a></li>
+              </ul>
+            </div>
 
-        <div class="nav-top">
-          <div class="left inliner">
-            <ul class="menu inliner">
-              <li class="inliner first"><a href="#"><i class="fas fa-globe-europe"></i>English<i class="fas fa-chevron-down"></i></a></li>
-              <li class="inliner"><a href="#">Contact us</a></li>
-            </ul>
-          </div>
-
-          <div class="right inliner">
-            <ul class="inliner">
-              <li class="inliner"><a href="#"><i class="fas fa-search"></i></a></li>
-              <li class="inliner"><a href="#"><button class="btn" type="button" name="button">Log in</button></a></li>
-              <li class="inliner"><a href="#"><button class="btn full" type="button" name="button">GetHubspotFree</button></a></li>
-            </ul>
+            <div class="right inliner">
+              <ul class="inliner">
+                <li class="inliner"><a href="#"><i class="fas fa-search"></i></a></li>
+                <li class="inliner"><a href="#"><button class="btn" type="button" name="button">Log in</button></a></li>
+                <li class="inliner last"><a href="#"><button class="btn full" type="button" name="button">GetHubspotFree</button></a></li>
+              </ul>
+            </div>
           </div>
         </div>
 
-        <div class="nav-bot">
-
+        <div class="bot">
+          <div class="nav-bot center">
+            <div class="logo inliner">
+              <img  class="img-logo" src="img/logo.svg" alt="">
+            </div>
+            <nav class="navinsite inliner">
+              <ul class="inliner">
+                <li class="inliner"><a href="#">software<i class="fas fa-chevron-down"></i></a></li>
+                <li class="inliner"><a href="#">Pricing<i class="fas fa-chevron-down"></i></a></li>
+                <li class="inliner"><a href="#">Resouces<i class="fas fa-chevron-down"></i></a></li>
+                <li class="inliner"><a href="#">Partners<i class="fas fa-chevron-down"></i></a></li>
+                <li class="inliner last"><a href="#">About<i class="fas fa-chevron-down"></i></a></li>
+              </ul>
+            </nav>
+          </div>
         </div>
       </nav>
+      <!-- fine navbar -->
     </header>
 
   </body>
