--- a/index.html
+++ b/index.html
@@ -49,6 +49,17 @@
         </div>
       </nav>
       <!-- fine navbar -->
+      <!-- banner e clame -->
+      <div class="wrapper">
+        <div class="clame-container center">
+            <div class="clame">
+              <h1>There’s a better way to grow.</h1>
+              <p>Marketing, sales, and service software that helps your business grow without compromise. Because “good for the business” should also mean “good for the customer.”</p>
+              <button class="btn full big" type="button" name="button">Get HubSpot free</button>
+              <small>Get started with FREE tools, and upgrade as you grow</small>
+            </div>
+        </div>
+      </div>
     </header>
 
   </body>
