--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
               <small>Get started with FREE tools, and upgrade as you grow</small>
             </div>
         </div>
+        <div class="bluebanner"></div>
       </div>
     </header>
 
