--- a/index.html
+++ b/index.html
@@ -62,6 +62,41 @@
         <div class="bluebanner"></div>
       </div>
     </header>
+    <main>
+      <section class="section-1">
+        <!-- clame 2 -->
+        <div class="clame-2 center">
+          <div class="cube inliner">
+            <img class="img-cube" src="img/Integrations_Illustration@2x.webp" alt="">
+          </div>
+          <h2>Powerful alone. Better together.</h2>
+          <p>HubSpot offers a full stack ok softwere for marketing, sales, and custumers service, with a completely free CRM at its cosr. They're powerfoul alone-but even better when used together</p>
+        </div>
+        <!-- fine clame 2 -->
+        <!-- sezione box -->
+        <div class="row center clear">
 
+          <div class="imgbutton float">
+            <div class="crm">
+              <img class="img-crm" src="img/CRM-Illustration.svg" alt="">
+            </div>
+            <button class="btn full big" type="button" name="button">Learn More</button>
+          </div>
+
+          <div class="description float">
+            <h3>Free HubSpot CRM</h3>
+            <p>Everything you need to organize, track, and build better relationship with leads and custumer. Yes, it's 100% free. Forever.</p>
+            <h4>popolar features</h4>
+            <ul class="">
+              <li class="inliner"><i class="fas fa-check-circle"></i>Contact Insight</li>
+              <li class="inliner"><i class="fas fa-check-circle"></i>Deals</li>
+              <li class="inliner"><i class="fas fa-check-circle"></i>Task</li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
+
+    </main>
   </body>
 </html>
