completata row-2 con colonne flottanti in sezione 1

--- a/index.html
+++ b/index.html
@@ -94,6 +94,58 @@
             </ul>
           </div>
         </div>
+
+        <div class="row-2 center clear">
+
+          <div class="column float">
+            <div class="photo">
+              <img class="img-crm" src="img/Marketing-Hub-Free.svg" alt="">
+            </div>
+            <h3>Marketing Hub</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim venia</p>
+            <hr>
+            <h4>popolar features</h4>
+            <ul>
+              <li class="features"><i class="fas fa-check-circle"></i>Lead generation</li>
+              <li class="features"><i class="fas fa-check-circle"></i>Marketing automation</li>
+              <li class="features"><i class="fas fa-check-circle"></i>Analytics</li>
+            </ul>
+            <button class="btn full big" type="button" name="button">learn more</button>
+          </div>
+
+          <div class="column mid float">
+            <div class="photo">
+              <img class="img-crm" src="img/Marketing-Hub-Free.svg" alt="">
+            </div>
+            <h3>Marketing Hub</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim venia</p>
+            <hr>
+            <h4>popolar features</h4>
+            <ul>
+              <li class="features"><i class="fas fa-check-circle"></i>Lead generation</li>
+              <li class="features"><i class="fas fa-check-circle"></i>Marketing automation</li>
+              <li class="features"><i class="fas fa-check-circle"></i>Analytics</li>
+            </ul>
+            <button class="btn full big" type="button" name="button">learn more</button>
+          </div>
+
+          <div class="column float">
+            <div class="photo">
+              <img class="img-crm" src="img/Marketing-Hub-Free.svg" alt="">
+            </div>
+            <h3>Marketing Hub</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim venia</p>
+            <hr>
+            <h4>popolar features</h4>
+            <ul>
+              <li class="features"><i class="fas fa-check-circle"></i>Lead generation</li>
+              <li class="features"><i class="fas fa-check-circle"></i>Marketing automation</li>
+              <li class="features"><i class="fas fa-check-circle"></i>Analytics</li>
+            </ul>
+            <button class="btn full big" type="button" name="button">learn more</button>
+          </div>
+
+        </div>
       </section>
 
 
