--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <main>
       <section class="section-1">
         <!-- clame 2 -->
-        <div class="clame-2 center">
+        <div class="title center">
           <div class="cube inliner">
             <img class="img-cube" src="img/Integrations_Illustration@2x.webp" alt="">
           </div>
@@ -115,7 +115,7 @@
 
           <div class="column mid float">
             <div class="photo">
-              <img class="img-crm" src="img/Marketing-Hub-Free.svg" alt="">
+              <img class="img-crm" src="img/Sales-Professional-Illustration.svg" alt="">
             </div>
             <h3>Marketing Hub</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim venia</p>
@@ -131,7 +131,7 @@
 
           <div class="column float">
             <div class="photo">
-              <img class="img-crm" src="img/Marketing-Hub-Free.svg" alt="">
+              <img class="img-crm" src="img/Service-Hub-Illustration.svg" alt="">
             </div>
             <h3>Marketing Hub</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim venia</p>
@@ -146,8 +146,55 @@
           </div>
 
         </div>
+        <!-- fine sezione box -->
       </section>
+      <section class="section-2">
+        <div class="title two center">
+          <h2>Learn and grow with award-winning support and a thriving community behind you.</h2>
+          <p>You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>
+        </div>
+        <div class="socialrow center clear">
+          <div class="socialinfo borderR float">
+            <div class="sociallogo">
+              <img class="socialimg" src="img/homepage_community_agency.svg" alt="">
+            </div>
+            <div class="description-social">
+              <p>150 <span>+</span></p>
+              <small>HubSpot user groups</small>
+            </div>
+          </div>
 
+          <div class="socialinfo borderR float">
+            <div class="sociallogo">
+              <img class="socialimg" src="img/homepage_community_agency.svg" alt="">
+            </div>
+            <div class="description-social">
+              <p>150 <span>+</span></p>
+              <small>HubSpot user groups</small>
+            </div>
+          </div>
+
+          <div class="socialinfo borderR float">
+            <div class="sociallogo">
+              <img class="socialimg" src="img/homepage_community_agency.svg" alt="">
+            </div>
+            <div class="description-social">
+              <p>150 <span>+</span></p>
+              <small>HubSpot user groups</small>
+            </div>
+          </div>
+
+          <div class="socialinfo float">
+            <div class="sociallogo">
+              <img class="socialimg" src="img/homepage_community_agency.svg" alt="">
+            </div>
+            <div class="description-social">
+              <p>150 <span>+</span></p>
+              <small>HubSpot user groups</small>
+            </div>
+          </div>
+        </div>
+      </section>
 
     </main>
   </body>
