fine griglia social

--- a/index.html
+++ b/index.html
@@ -194,6 +194,48 @@
             </div>
           </div>
         </div>
+
+        <div class="socialrow two center clear">
+          <div class="socialinfo borderR float">
+            <div class="sociallogo">
+              <img class="socialimg" src="img/homepage_community_agency.svg" alt="">
+            </div>
+            <div class="description-social">
+              <p>150 <span>+</span></p>
+              <small>HubSpot user groups</small>
+            </div>
+          </div>
+
+          <div class="socialinfo borderR float">
+            <div class="sociallogo">
+              <img class="socialimg" src="img/homepage_community_agency.svg" alt="">
+            </div>
+            <div class="description-social">
+              <p>150 <span>+</span></p>
+              <small>HubSpot user groups</small>
+            </div>
+          </div>
+
+          <div class="socialinfo borderR float">
+            <div class="sociallogo">
+              <img class="socialimg" src="img/homepage_community_agency.svg" alt="">
+            </div>
+            <div class="description-social">
+              <p>150 <span>+</span></p>
+              <small>HubSpot user groups</small>
+            </div>
+          </div>
+
+          <div class="socialinfo float">
+            <div class="sociallogo">
+              <img class="socialimg" src="img/homepage_community_agency.svg" alt="">
+            </div>
+            <div class="description-social">
+              <p>150 <span>+</span></p>
+              <small>HubSpot user groups</small>
+            </div>
+          </div>
+        </div>
       </section>
 
     </main>
