griglia terminata anche con img e scritte

--- a/index.html
+++ b/index.html
@@ -159,38 +159,38 @@
               <img class="socialimg" src="img/homepage_community_agency.svg" alt="">
             </div>
             <div class="description-social">
-              <p>150 <span>+</span></p>
+              <p>150<span>+</span></p>
               <small>HubSpot user groups</small>
             </div>
           </div>
 
           <div class="socialinfo borderR float">
             <div class="sociallogo">
-              <img class="socialimg" src="img/homepage_community_agency.svg" alt="">
+              <img class="socialimg" src="img/homepage_community_blog.svg" alt="">
             </div>
             <div class="description-social">
-              <p>150 <span>+</span></p>
-              <small>HubSpot user groups</small>
+              <p>4.5M<span>+</span></p>
+              <small>monthly visits</small>
             </div>
           </div>
 
           <div class="socialinfo borderR float">
             <div class="sociallogo">
-              <img class="socialimg" src="img/homepage_community_agency.svg" alt="">
+              <img class="socialimg" src="img/homepage_community_academy.svg" alt="">
             </div>
             <div class="description-social">
-              <p>150 <span>+</span></p>
-              <small>HubSpot user groups</small>
+              <p>155K<span>+</span></p>
+              <small>certified professionals</small>
             </div>
           </div>
 
           <div class="socialinfo float">
             <div class="sociallogo">
-              <img class="socialimg" src="img/homepage_community_agency.svg" alt="">
+              <img class="socialimg" src="img/homepage_community_inbound.svg" alt="">
             </div>
             <div class="description-social">
-              <p>150 <span>+</span></p>
-              <small>HubSpot user groups</small>
+              <p>21K<span>+</span></p>
+              <small>registered attendees</small>
             </div>
           </div>
         </div>
@@ -198,41 +198,41 @@
         <div class="socialrow two center clear">
           <div class="socialinfo borderR float">
             <div class="sociallogo">
-              <img class="socialimg" src="img/homepage_community_agency.svg" alt="">
+              <img class="socialimg" src="img/homepage_community_connect.svg" alt="">
             </div>
             <div class="description-social">
-              <p>150 <span>+</span></p>
-              <small>HubSpot user groups</small>
+              <p>200<span>+</span></p>
+              <small>integrations</small>
             </div>
           </div>
 
           <div class="socialinfo borderR float">
             <div class="sociallogo">
-              <img class="socialimg" src="img/homepage_community_agency.svg" alt="">
+              <img class="socialimg" src="img/homepage_community_globe.svg" alt="">
             </div>
             <div class="description-social">
-              <p>150 <span>+</span></p>
-              <small>HubSpot user groups</small>
+              <p>6<span>+</span></p>
+              <small>languages</small>
             </div>
           </div>
 
           <div class="socialinfo borderR float">
             <div class="sociallogo">
-              <img class="socialimg" src="img/homepage_community_agency.svg" alt="">
+              <img class="socialimg" src="img/homepage_community_followers.svg" alt="">
             </div>
             <div class="description-social">
-              <p>150 <span>+</span></p>
-              <small>HubSpot user groups</small>
+              <p>2.6M<span>+</span></p>
+              <small>social followers</small>
             </div>
           </div>
 
           <div class="socialinfo float">
             <div class="sociallogo">
-              <img class="socialimg" src="img/homepage_community_agency.svg" alt="">
+              <img class="socialimg" src="img/growthhub-white-small-1.svg" alt="">
             </div>
             <div class="description-social">
-              <p>150 <span>+</span></p>
-              <small>HubSpot user groups</small>
+              <p>5K<span>+</span></p>
+              <small>profiles and counting</small>
             </div>
           </div>
         </div>
