fine sezione social

--- a/index.html
+++ b/index.html
@@ -237,7 +237,46 @@
           </div>
         </div>
       </section>
+      <section class="section-3">
+        <div class="costumer center">
+          <div class="costumerinfo float">
+            <h3>64,500</h3>
+            <p>costumer in over <span>100</span> counties growing their bisness with HubSpot</p>
+          </div>
 
+          <div class="costumerlogo float inliner">
+            <div class="logorow">
+              <div class="logodiv inliner">
+                <img class="logorowimg" src="img/Atlassian-horizontal-blue@2x.png" alt="">
+              </div>
+              <div class="logodiv inliner">
+                <img class="logorowimg" src="img/doordash_owler_20181011_194113_original@2x.png" alt="">
+              </div>
+              <div class="logodiv inliner">
+                <img class="logorowimg" src="img/g2crowd-logo@2x.png" alt="">
+              </div>
+              <div class="logodiv inliner">
+                <img class="logorowimg" src="img/purple-logo@2x.webp" alt="">
+              </div>
+            </div>
+
+            <div class="logorow-2">
+              <div class="logodiv inliner">
+                <img class="logorowimg" src="img/Subaru_Logo_v2_186x63@2x.webp" alt="">
+              </div>
+              <div class="logodiv inliner">
+                <img class="logorowimg" src="img/Wistia_logo@2x.webp" alt="">
+              </div>
+              <div class="logodiv inliner">
+                <img class="logorowimg" src="img/Classpass-logo@2x.webp" alt="">
+              </div>
+              <div class="logodiv inliner">
+                <img class="logorowimg" src="img/VMware_logo_gry_RGB_300dpi@2x.webp" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
