completata sezione 3 con loghi

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         </div>
       </section>
       <section class="section-3">
-        <div class="costumer center">
+        <div class="costumer center clear">
           <div class="costumerinfo float">
             <h3>64,500</h3>
             <p>costumer in over <span>100</span> counties growing their bisness with HubSpot</p>
@@ -274,6 +274,17 @@
                 <img class="logorowimg" src="img/VMware_logo_gry_RGB_300dpi@2x.webp" alt="">
               </div>
             </div>
+          </div>
+        </div>
+        <div class="starttoday center clear">
+          <div class="clame float">
+            <h1>There’s a better way to grow.</h1>
+            <p>Marketing, sales, and service software that helps your business grow without compromise. Because “good for the business” should also mean “good for the customer.”</p>
+            <button class="btn full big" type="button" name="button">Get HubSpot free</button>
+            <small>Get started with FREE tools, and upgrade as you grow</small>
+          </div>
+          <div class="ragazzacinese">
+            <img class="ragazzacineseimg" src="img/woman.webp" alt="">
           </div>
         </div>
       </section>
