finita prima sezione footer

--- a/index.html
+++ b/index.html
@@ -288,6 +288,61 @@
           </div>
         </div>
       </section>
+      <footer>
+        <div class="footdiv center clear">
+          <div class="utility float">
+            <h2>Incrise Your Traffic</h2>
+            <ul>
+              <li class="lifoot"><a href="#">Ad Software</a></li>
+              <li class="lifoot"><a href="#">Blog Software</a></li>
+              <li class="lifoot"><a href="#">SEO Software</a></li>
+              <li class="lifoot"><a href="#">Social Media Software</a></li>
+              <li class="lifoot"><a href="#">Content Management System</a></li>
+            </ul>
+          </div>
+          <div class="utility float">
+            <h2>Incrise Your Traffic</h2>
+            <ul>
+              <li class="lifoot"><a href="#">Ad Software</a></li>
+              <li class="lifoot"><a href="#">Blog Software</a></li>
+              <li class="lifoot"><a href="#">SEO Software</a></li>
+              <li class="lifoot"><a href="#">Social Media Software</a></li>
+              <li class="lifoot"><a href="#">Content Management System</a></li>
+            </ul>
+          </div>
+          <div class="utility float">
+            <h2>Incrise Your Traffic</h2>
+            <ul>
+              <li class="lifoot"><a href="#">Ad Software</a></li>
+              <li class="lifoot"><a href="#">Blog Software</a></li>
+              <li class="lifoot"><a href="#">SEO Software</a></li>
+              <li class="lifoot"><a href="#">Social Media Software</a></li>
+              <li class="lifoot"><a href="#">Content Management System</a></li>
+            </ul>
+          </div>
+          <div class="utility float">
+            <h2>Incrise Your Traffic</h2>
+            <ul>
+              <li class="lifoot"><a href="#">Ad Software</a></li>
+              <li class="lifoot"><a href="#">Blog Software</a></li>
+              <li class="lifoot"><a href="#">SEO Software</a></li>
+              <li class="lifoot"><a href="#">Social Media Software</a></li>
+              <li class="lifoot"><a href="#">Content Management System</a></li>
+              <li class="lifoot"><button class="btn full" type="button" name="button">Contact HubSpot Support</button></li>
+              <li class="soialicon lifoot">
+                  <i class="icon fab fa-facebook-square"></i>
+                  <i class="icon fab fa-instagram"></i>
+                  <i class="icon fab fa-youtube"></i>
+                  <i class="icon fab fa-twitter"></i>
+                  <i class="icon fab fa-linkedin"></i>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="center">
+
+        </div>
+      </footer>
     </main>
   </body>
 </html>
