completata parte finale del footer
to do: sistemare particolari e paddig di alcuni elementi

--- a/index.html
+++ b/index.html
@@ -339,8 +339,27 @@
             </ul>
           </div>
         </div>
-        <div class="center">
-
+        <div class="superbottom center">
+          <div class="language">
+            <ul class="inliner">
+              <li class="inliner"><a href="#">English</a></li>
+              <li class="inliner"><a href="#">Deutsch</a></li>
+              <li class="inliner"><a href="#">Cinese</a></li>
+              <li class="inliner"><a href="#">Espanol</a></li>
+              <li class="inliner"><a href="#">Portugues</a></li>
+              <li class="inliner"><a href="#">Francais</a></li>
+            </ul>
+          </div>
+          <div class="legal clear">
+            <div class="logowhite float">
+              <img class="logowhite-img" src="img/HSLogo_gray.svg" alt=""><br>
+              <small>Copyright © 2021 HubSpot, Inc.</small>
+            </div>
+            <div class="legalstuff">
+              <a href="#">Legal stuff</a>
+              <a href="#">Privacy Policy</a>
+            </div>
+          </div>
         </div>
       </footer>
     </main>
