sistemati margini e immagine sezione-3 e lingue del footer

--- a/index.html
+++ b/index.html
@@ -344,9 +344,9 @@
             <ul class="inliner">
               <li class="inliner"><a href="#">English</a></li>
               <li class="inliner"><a href="#">Deutsch</a></li>
-              <li class="inliner"><a href="#">Cinese</a></li>
-              <li class="inliner"><a href="#">Espanol</a></li>
-              <li class="inliner"><a href="#">Portugues</a></li>
+              <li class="inliner"><a href="#">日本語</a></li>
+              <li class="inliner"><a href="#">Español</a></li>
+              <li class="inliner"><a href="#">Português</a></li>
               <li class="inliner"><a href="#">Francais</a></li>
             </ul>
           </div>
