sistemati colori delle opzione della navbar, allineamento bottoni e menu

--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
                 <li class="inliner first"><a href="#"><i class="fas fa-globe-europe"></i>English<i class="fas fa-chevron-down"></i></a></li>
                 <li class="inliner"><a href="#">Contact us</a></li>
               </ul>
-            </div>
-
-            <div class="right inliner">
+            </div><!--
+            --><div class="right inliner">
               <ul class="inliner">
                 <li class="inliner"><a href="#"><i class="fas fa-search"></i></a></li>
                 <li class="inliner"><a href="#"><button class="btn" type="button" name="button">Log in</button></a></li>
@@ -35,8 +34,8 @@
           <div class="nav-bot center">
             <div class="logo inliner">
               <img  class="img-logo" src="img/logo.svg" alt="">
-            </div>
-            <nav class="navinsite inliner">
+            </div><!-- 
+            --><nav class="navinsite inliner">
               <ul class="inliner">
                 <li class="inliner"><a href="#">software<i class="fas fa-chevron-down"></i></a></li>
                 <li class="inliner"><a href="#">Pricing<i class="fas fa-chevron-down"></i></a></li>
