--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div class="nav-bot center">
             <div class="logo inliner">
               <img  class="img-logo" src="img/logo.svg" alt="">
-            </div><!-- 
+            </div><!--
             --><nav class="navinsite inliner">
               <ul class="inliner">
                 <li class="inliner"><a href="#">software<i class="fas fa-chevron-down"></i></a></li>
@@ -86,7 +86,7 @@
             <h3>Free HubSpot CRM</h3>
             <p>Everything you need to organize, track, and build better relationship with leads and custumer. Yes, it's 100% free. Forever.</p>
             <h4>popolar features</h4>
-            <ul class="">
+            <ul class="listfeat">
               <li class="inliner"><i class="fas fa-check-circle"></i>Contact Insight</li>
               <li class="inliner"><i class="fas fa-check-circle"></i>Deals</li>
               <li class="inliner"><i class="fas fa-check-circle"></i>Task</li>
@@ -275,6 +275,7 @@
             </div>
           </div>
         </div>
+        <!-- startoday -->
         <div class="starttoday center clear">
           <div class="clame float">
             <h1>There’s a better way to grow.</h1>
@@ -286,12 +287,13 @@
             <img class="ragazzacineseimg" src="img/woman.webp" alt="">
           </div>
         </div>
+        <!-- fine startoday -->
       </section>
       <footer>
         <div class="footdiv center clear">
           <div class="utility float">
             <h2>Incrise Your Traffic</h2>
-            <ul>
+            <ul class="optselect">
               <li class="lifoot"><a href="#">Ad Software</a></li>
               <li class="lifoot"><a href="#">Blog Software</a></li>
               <li class="lifoot"><a href="#">SEO Software</a></li>
