messo hr mancante nella sezione 2 e validato il codice html
correzione dei bottoni e eliminato un secondo h1

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             --><div class="right inliner">
               <ul class="inliner">
                 <li class="inliner"><a href="#"><i class="fas fa-search"></i></a></li>
-                <li class="inliner"><a href="#"><button class="btn" type="button" name="button">Log in</button></a></li>
-                <li class="inliner last"><a href="#"><button class="btn full" type="button" name="button">GetHubspotFree</button></a></li>
+                <li class="inliner"><button class="btn" type="button" name="button">Log in</button></li>
+                <li class="inliner last"><button class="btn full" type="button" name="button">GetHubspotFree</button></li>
               </ul>
             </div>
           </div>
@@ -85,7 +85,8 @@
           <div class="description float">
             <h3>Free HubSpot CRM</h3>
             <p>Everything you need to organize, track, and build better relationship with leads and custumer. Yes, it's 100% free. Forever.</p>
-            <h4>popolar features</h4>
+            <h4 class="inliner">popolar features</h4>
+            <hr class=" hrfeat inliner">
             <ul class="listfeat">
               <li class="inliner"><i class="fas fa-check-circle"></i>Contact Insight</li>
               <li class="inliner"><i class="fas fa-check-circle"></i>Deals</li>
@@ -278,7 +279,7 @@
         <!-- startoday -->
         <div class="starttoday center clear">
           <div class="clame float">
-            <h1>There’s a better way to grow.</h1>
+            <h2>There’s a better way to grow.</h2>
             <p>Marketing, sales, and service software that helps your business grow without compromise. Because “good for the business” should also mean “good for the customer.”</p>
             <button class="btn full big" type="button" name="button">Get HubSpot free</button>
             <small>Get started with FREE tools, and upgrade as you grow</small>
